Fix issues with navbar overflow

--- a/Common/static/css/nav.css
+++ b/Common/static/css/nav.css
@@ -16,6 +16,7 @@ body {
     -moz-osx-font-smoothing: grayscale;
     padding-top: auto;
     border-left-width: 0px;
+    overflow: hidden;
 }
 
 .navbar div {
